--- a/pomelo-card-imony.css
+++ b/pomelo-card-imony.css
@@ -37,14 +37,14 @@
   }
   
   .card:before {
-    content: url(https://app-pallaxs.thesail.pro/content/foxbit-card/foxbit-white-badge.svg);
+    content: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/bg_imony.jpg);
     position: absolute;
     right: 16px;
     top: 0.65rem;
   }
   
   .card::after {
-    content: url(https://app-pallaxs.thesail.pro/content/foxbit-card/mastercard.svg);
+    content: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/bg_imony.jpg);
     position: absolute;
     right: 16px;
     bottom: 0.65rem;
