--- a/pomelo-card-imony.css
+++ b/pomelo-card-imony.css
@@ -41,8 +41,8 @@
   .card:before {
     content: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/iMonyBlanco.png);
     position: absolute;
-    right: 16px;
-    top: 0.65rem;
+    left: 18px;
+    top: 18px;
   }
   
   .card::after {
