--- a/pomelo-card-imony.css
+++ b/pomelo-card-imony.css
@@ -46,7 +46,7 @@
   }
   
   .card::after {
-    content: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/bg_imony.jpg);
+    content: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/visa-white.png);
     position: absolute;
     right: 16px;
     bottom: 0.65rem;
