--- a/pomelo-card-imony.css
+++ b/pomelo-card-imony.css
@@ -46,10 +46,15 @@
   }
   
   .card::after {
-    content: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/visa-white.png);
+    content: '';
     position: absolute;
-    right: 16px;
-    bottom: 0.65rem;
+    right: 18px;
+    bottom: 35px;
+    background-image: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/visa-white.png);
+    background-size: cover;
+    background-position: center;
+    height: 28px;
+    width: 90px;
   }
   
   .card .pan {
