--- a/pomelo-card-imony-visa-block.css
+++ b/pomelo-card-imony-visa-block.css
@@ -7,6 +7,23 @@
   color: rgb(255, 255, 255);
 }
 
+div#__next {
+  position: relative;
+}
+
+div#__next::before {
+  content: 'Bloqueda';
+  background: #D42121;
+  border-radius: 16px;
+  font-size: 12px;
+  font-weight: 400;
+  padding: 4px 8px 4px 8px;
+  left: 32px;
+  bottom: 35px;
+  position: absolute;
+  z-index: 1;
+}
+
 .card {
   background: linear-gradient(-45deg, rgb(255, 110, 0) 0%, rgb(255, 162, 58) 100%);
   border-radius: 12px;
@@ -16,6 +33,8 @@
   background-image: url(https://raw.githubusercontent.com/aurisolado/pomelo-styles/main/bg_imony.jpg);
   background-size: cover;
   background-position: center;
+  opacity: 0.50;
+  filter: grayscale(100%);
 }
 
 .card:before {
