--- a/pomelo-card-imony-form-active.css
+++ b/pomelo-card-imony-form-active.css
@@ -20,12 +20,13 @@
 }
 
 .list .pan {
-  color: #333333;
+  margin-bottom: 8px;
+
+  color: #333;
   font-size: 16px;
   justify-content: center;
-  letter-spacing: 1.1px;
   font-weight: 400;
-  margin: 0px;
+  line-height: 20px;
 }
 
 .list .pan,
@@ -45,7 +46,7 @@
 
 .list .pan .label {
   font-size: 14px;
-  margin-top: 2px;
+  margin-top: 16px;
   letter-spacing: normal;
   text-transform: none;
   color: #333333;
@@ -55,44 +56,55 @@
 }
 
 .list .name {
+  margin-bottom: 8px;
+
   color: #333;
   font-size: 16px;
-  text-transform: uppercase;
-  letter-spacing: .025em;
-  display: flex;
-  flex-direction: column;
-  margin: 0 0 46px
+  justify-content: center;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .list .name .label {
   font-size: 14px;
-  margin-top: 2px;
+  margin-top: 16px;
   letter-spacing: normal;
   text-transform: none;
-  color: #4a4a4a
+  color: #333333;
+  line-height: 18px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .list .expiration-date {
+  margin-bottom: 8px;
+
   color: #333;
   font-size: 16px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 0 46px
+  justify-content: center;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .list .expiration-date .label {
   font-size: 14px;
-  margin-top: 2px;
+  margin-top: 16px;
   letter-spacing: normal;
   text-transform: none;
-  color: #4a4a4a
+  color: #333333;
+  line-height: 18px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .list .security-code {
+  margin-bottom: 8px;
+
   color: #333;
   font-size: 16px;
-  display: flex;
-  flex-direction: column
+  justify-content: center;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .list .security-code .label {
@@ -102,9 +114,13 @@
 .list .pin,
 .list .security-code .label {
   font-size: 14px;
+  margin-top: 16px;
   letter-spacing: normal;
   text-transform: none;
-  color: #4a4a4a
+  color: #333333;
+  line-height: 18px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .list .pin {
