--- a/pomelo-card-imony-form-active.css
+++ b/pomelo-card-imony-form-active.css
@@ -1,8 +1,10 @@
-@import"https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap";
-@import"https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap";
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+  font-family: "Hanken Grotesk", sans-serif;
+}
 
 .list {
-  width: auto;
   background: 0 0;
   justify-content: end;
   align-items: normal;
@@ -10,7 +12,6 @@
   padding: 16px 12px 16px 12px;
   position: relative;
   margin: auto;
-  background: #F4F6FB;
   box-shadow: none;
 }
 
@@ -31,17 +32,18 @@
 
 .list .pan,
 .list .pan .wrapper {
-  display: flex
+  display: flex;
+  position: relative;
 }
 
 .list .pan .wrapper .copy-icon {
-  height: 25px;
-  width: 25px;
+  height: 27px;
+  width: 27px;
   margin-left: 5px;
   color: #4500E3;
   position: absolute;
-  right: 80px;
-  top: calc(50% - 14px);
+  right: 75px;
+  top: -3px;
 }
 
 .list .pan .label {
@@ -135,10 +137,6 @@
   color: #4a4a4a
 }
 
-.list .cvv-expiration-time {
-  margin: 0 0 46px
-}
-
 .list .cvv-expiration-time,
 .list .cvv-expiration-time .label {
   font-size: 12px;
@@ -219,7 +217,6 @@
   letter-spacing: normal;
   text-transform: none;
   color: #4a4a4a;
-  margin: 0 0 46px
 }
 
 .activation-form {
@@ -256,7 +253,6 @@
 .activation-form .submit-button {
   cursor: pointer;
   margin: 10px 5px 5px;
-  font-family: poppins, nunito, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -334,8 +330,4 @@ body,
 html {
   padding: 0;
   margin: 0;
-  font-family: poppins, nunito, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
 }
-
-
-
