--- a/pomelo-card-imony-pan.css
+++ b/pomelo-card-imony-pan.css
@@ -1,5 +1,9 @@
-@import"https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap";
-@import"https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap";
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+  font-family: "Hanken Grotesk", sans-serif;
+}
+
 
 .list {
   width: auto;
@@ -240,7 +244,6 @@
 .activation-form .submit-button {
   cursor: pointer;
   margin: 10px 5px 5px;
-  font-family: poppins, nunito, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -318,7 +321,6 @@ body,
 html {
   padding: 0;
   margin: 0;
-  font-family: poppins, nunito, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
 }
 
 
