--- a/pomelo-card-imony-pan.css
+++ b/pomelo-card-imony-pan.css
@@ -27,7 +27,7 @@
   color: #333333;
   font-size: 16px;
   justify-content: center;
-  letter-spacing: 1.1px;
+  letter-spacing: initial;
   font-weight: 400;
   margin: 0px;
 }
